--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,6 @@
 		<title> Hello example </title>
 	</head>
 	<body>
-		<p> Hello World! </p>
+		<p> Hello World! Это сообщение не от NGINX </p>
 	</body>
 </html>
