--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,6 @@
 		<title> Hello example </title>
 	</head>
 	<body>
-		<p> Hello World! Это сообщение не от NGINX </p>
+		<p> Hello World! Это сообщение не от NGINX!  </p>
 	</body>
 </html>
